# systems

./: .bwconfig  .cursorrules  .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  LICENSE  README.md  configuration.nix  flake-options.nix  flake.nix  home.nix  hosts.nix  mac-user.nix  machines.nix  nix.conf  overlays.nix  pkg-config.nix  registry.json  shell-module.nix  shell.nix  statix.toml  users.nix
auth/: lieer.perso.json  lieer.work.json
common-system-modules/: builders.nix  default.nix  fonts.nix
darwin-modules/: configuration.nix  default.nix  fonts.nix  gmac.nix  gui.nix  hid.nix  keyboards.nix  mac-user.nix  nix.nix  signing-keys.nix  ssh.nix  system.nix  u2f-keys.nix  versions.nix
docs/: nvf-lazyvim-roadmap.md
home-modules/: accounts.nix  antigravity.nix  aspell.nix  blaze.nix  builder-access.nix  catppuccin.nix  claude-firefly.nix  claude-glm.nix  claude-skills.nix  claude-statusline.nix  cloud-shell.nix  cursor.nix  darwin-apps.nix  default.nix  dosbox.nix  features.nix  gcert.nix  gcloud.nix  google.nix  hunk.nix  jujutsu.nix  just.nix  kew.nix  kubeswitch.nix  mailsetup.nix  (+6 more)
overlays/pkg/local/gpad2mouse/: Cargo.toml  Info.plist  Makefile  Package.swift
overlays/pkg/local/gpad2mouse/Sources/gpad2mouse/: AppWatcher.swift  ButtonMappingView.swift  Config.swift  GamepadManager.swift  MouseEmitter.swift  Settings.swift  SettingsView.swift  SettingsWindowController.swift  StatusBar.swift  main.swift
overlays/pkg/local/gpad2mouse/src/: appwatcher.rs  config.rs  gamepad.rs  main.rs  mouse.rs  settings.rs  settings_window.rs  statusbar.rs
(+513 files in other folders)
