[package]
name = "gpad2mouse"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSNotification",
    "NSString",
    "NSUserDefaults",
    "NSValue",
    "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSWorkspace",
] }
objc2-game-controller = { version = "0.3", features = [
    "GCController",
    "GCDevice",
    "GCExtendedGamepad",
    "GCControllerButtonInput",
    "GCControllerAxisInput",
    "GCControllerDirectionPad",
    "GCControllerElement",
    "GCPhysicalInputProfile",
    "block2",
] }
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.2"
block2 = "0.6"
